# moe-llm-from-scratch

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/data/: founder.yaml  full_training.yaml
configs/model/: aether_moe.yaml  aether_small.yaml  aether_tiny.yaml
data/: tokenizer.json
data/distill/: conversations.txt  metadata.json  train.jsonl
docs/: agent_protocol.md  api_reference.md  architecture.md  plan.md  research_findings.md
scripts/: app.py  chat.py  chat_v2.py  download_data.py  generate_data.py  generate_distill_data.py  server.py  train.py  train_tokenizer.py  train_v2.py
src/aether/core/: agent.py  nlu.py  safety.py  tools.py
src/aether/data/: loader.py
src/aether/models/: __init__.py  audio_adapter.py  moe_layer.py  rope.py  transformer.py  transformer_v2.py  vision_adapter.py
tests/: __init__.py  conftest.py  test_core.py  test_models.py
